feature.SLOT-136.modify-endpoint-get-user-slots (#64)
* [REF][SLOT-136]: Cambio de formato de la response

* [REF][SLOT-136]: Implementation of changes suggested in the code review

* [REF][SLOT-136]: Correcion

* [REF][SLOT-136]: Cambios por conflictos